--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,77 +1,79 @@
 <!doctype html>
 <html class="no-js">
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <!-- build:css(.) styles/vendor.css -->
-  <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-  <!-- endbower -->
-  <!-- endbuild -->
-  <!-- build:css(.tmp) styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- endbuild -->
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- build:css(.) styles/vendor.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
 </head>
 <body ng-app="letusgoApp" ng-controller="IndexController">
 <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-  your browser</a> to improve your experience.</p>
+    your browser</a> to improve your experience.</p>
 <![endif]-->
 
 <!-- Add your site or application content here -->
 
-<div class="header">
-  <div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse"
-                data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Let's Go</a>
-      </div>
-      <div class="collapse navbar-collapse" role="navigation">
-        <ul class="nav navbar-nav">
-          <li ng-class="{active:activeMainbar}">
-            <a href="#">主页</a>
-          </li>
-          <li ng-class="{active:activeListbar}">
-            <a href="#/list">商城</a>
-          </li>
-          <li class="dropdown" ng-class="{active:activeManagebar}">
-            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">管理 <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#/category">分类管理</a></li>
-              <li class="divider"></li>
-              <li><a href="#/product">商品管理</a></li>
-            </ul>
-          </li>
-        </ul>
 
-        <ul class="nav navbar-nav navbar-right">
-          <li ng-class="{active:activeCartbar}">
-            <a href="#/cart"><span class="glyphicon glyphicon-shopping-cart"></span>购物车
-              (<span>{{amounts}}</span>)
-            </a>
-          </li>
-        </ul>
-      </div>
+<div class="header">
+    <div class="navbar navbar-inverse" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button class="navbar-toggle collapsed" type="button" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Let's Go</a>
+            </div>
+            <div class="collapse navbar-collapse" role="navigation">
+                <ul class="nav navbar-nav">
+                    <li ng-class="{active:activeMainbar}">
+                        <a href="#">主页</a>
+                    </li>
+                    <li ng-class="{active:activeListbar}">
+                        <a href="#/list">商城</a>
+                    </li>
+                    <li class="dropdown" ng-class="{active:activeManagebar}">
+                        <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">管理 <span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#/category">分类管理</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#/product">商品管理</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li ng-class="{active:activeCartbar}">
+                        <a href="#/cart"><span class="glyphicon glyphicon-shopping-cart"></span>购物车
+                            (<span>{{amounts}}</span>)
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 <div class="container">
 
-  <div ng-view=""></div>
+    <div ng-view=""></div>
 
-  <!--<div class="footer">-->
-  <!--<p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>-->
-  <!--</div>-->
+    <!--<div class="footer">-->
+    <!--<p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>-->
+    <!--</div>-->
 </div>
 
 <!-- build:js(.) scripts/oldieshim.js -->
