--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -57,6 +57,9 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
+                    <li ng-class="{active:false}">
+                        <a href="#" data-toggle="modal" data-target="#login">登录/注册</a>
+                    </li>
                     <li ng-class="{active:activeCartbar}">
                         <a href="#/cart"><span class="glyphicon glyphicon-shopping-cart"></span>购物车
                             (<span>{{amounts}}</span>)
@@ -121,5 +124,30 @@
 <script src="scripts/controllers/product-add.js"></script>
 <script src="scripts/controllers/product-update.js"></script>
 <!-- endbuild -->
+
+<div class="modal fade" id="login">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">登录/注册</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="control-label">用户名</label>
+                    <input class="form-control" type="text" ng-model="user.name"/>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">密码</label>
+                    <input class="form-control" type="password" ng-model="user.password"/>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" ng-click="login()">登录</button>
+                <button type="button" class="btn btn-default" ng-click="register()">注册</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 </body>
 </html>
