--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -145,7 +145,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" ng-click="login()" data-dismiss="modal">登录</button>
-                <button type="button" class="btn btn-default" ng-click="register()">注册</button>
+                <button type="button" class="btn btn-default" ng-click="register()" data-dismiss="modal">注册</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
